--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -33,5 +33,15 @@ html
           li
             a[href="#"]
               | Contact
+      
+      - if session[:user_id]
+        ul 
+          li 
+            = link_to 'Orders', orders_path
+          li 
+            = link_to 'Products', products_path
+          li 
+            = link_to 'Users', users_path
+      
       #main
         = yield
