--- a/app/views/line_items/create.js.erb
+++ b/app/views/line_items/create.js.erb
@@ -1,7 +1,5 @@
 $('#notice').hide();
 
-if ($('#cart tr').length == 1) { $('#cart').show('blind', 1000); }
-
-$('#cart').html("<%=j render(@cart) %>");
-
-$('#current_item').css({'background-color':'#88ff88'}).animate({'background-color':'#114411'}, 1000);
+$('.container-cart').html("<%=j render @cart %>");
+$(".shopping-cart").hide();
+$('.fa.fa-shopping-cart').css({'color':'#00CC00'}).animate({'color':'#777777'}, 2500);
