--- a/app/views/carts/_cart.html.slim
+++ b/app/views/carts/_cart.html.slim
@@ -1,11 +1,16 @@
 - unless cart.line_items.empty?
-  h3 Your Cart:
-  table
-    = render(cart.line_items)
-    tr.total_line
-      td[colspan="2"]
-        | Total
-      td.total_cell
-        = number_to_currency(cart.total_price)
-  = button_to 'Checkout', new_order_path, method: :get
-  = button_to 'Empty cart', cart, method: :delete, data: { confirm: 'Are you sure?' }
+  .shopping-cart
+    .shopping-cart-header
+      i.fa.fa-shopping-cart.cart-icon
+      span.badge
+        = cart.line_items.sum('quantity')
+      .shopping-cart-total
+        span.lighter-text
+          | Total:
+        span.main-color-text
+          = number_to_currency(cart.total_price)
+    ul.shopping-cart-items
+      = render(cart.line_items)
+    .button
+      = button_to "Checkout", new_order_path, method: :get, :form_class => 'button-left'
+      //= button_to 'Empty cart', cart, method: :delete, :form_class => 'button-right', data: { confirm: 'Are you sure?' }
