--- a/app/views/line_items/_line_item.html.slim
+++ b/app/views/line_items/_line_item.html.slim
@@ -1,15 +1,34 @@
 - if line_item == @current_item
-  <tr id="current_item">
+  #current_item
 - else
-  <tr>
-td
-  = line_item.quantity
-  | ×
-td
+  <li class="clearfix">
+/img[src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/195612/cart-item1.jpg" alt="item1"]
+span.item-name
   = line_item.product.title
-td.item_price
+  .quantity
+    = button_to "-", decrease_line_item_path(line_item), method: :put, remote: true
+    = button_to '+', increase_line_item_path(line_item), method: :put, remote: true
+span.item-price
   = number_to_currency(line_item.total_price)
-td.change_item
-  = button_to "-", decrease_line_item_path(line_item), method: :put, remote: true
-  = button_to '+', increase_line_item_path(line_item), method: :put, remote: true
-</tr>
+span.item-quantity
+  | Quantity: 
+  = line_item.quantity
+p
+br
+</li>
+
+
+
+
+/   <tr>
+/ td
+/   = line_item.quantity
+/   | ×
+/ td
+/   = line_item.product.title
+/ td.item_price
+/   = number_to_currency(line_item.total_price)
+/ td.change_item
+  / = button_to "-", decrease_line_item_path(line_item), method: :put, remote: true
+  / = button_to '+', increase_line_item_path(line_item), method: :put, remote: true
+/ </tr>
