--- a/app/views/line_items/decrease.js.erb
+++ b/app/views/line_items/decrease.js.erb
@@ -1,6 +1,3 @@
-$('#cart').html("<%=j render @cart %>");
-$('#current_item').css({'background-color':'#88ff88'}).animate({'background-color':'#114411'}, 1000);
-if ($('#cart tr').length==1) {
-    // Hide the cart
-    $('#cart').hide('blind', 1000);
-}
+$('.container-cart').html("<%=j render @cart %>");
+
+$('.fa.fa-shopping-cart.cart-icon').css({'color':'#CC0000'}).animate({'color':'#515783'}, 2500);
