--- a/app/views/line_items/increase.js.erb
+++ b/app/views/line_items/increase.js.erb
@@ -1,2 +1,3 @@
-$('#cart').html("<%=j render @cart %>");
-$('#current_item').css({'background-color':'#88ff88'}).animate({'background-color':'#114411'}, 1000);
+$('.container-cart').html("<%=j render @cart %>");
+
+$('.fa.fa-shopping-cart.cart-icon').css({'color':'#00CC00'}).animate({'color':'#515783'}, 2500);
