--- a/app/views/carts/edit.html.slim
+++ b/app/views/carts/edit.html.slim
@@ -1,7 +1,9 @@
-h1 Editing cart
+.content
+  .panel
+    h3 Editing cart
 
-== render 'form'
+    == render 'form'
 
-= link_to 'Show', @cart
-'  |
-= link_to 'Back', carts_path
+    = link_to 'Show', @cart
+    '  |
+    = link_to 'Back', carts_path
