--- a/app/views/orders/show.html.slim
+++ b/app/views/orders/show.html.slim
@@ -1,18 +1,19 @@
 p#notice = notice
+.content
+  .panel
+    p
+      strong Name:
+      = @order.name
+    p
+      strong Address:
+      = @order.address
+    p
+      strong Email:
+      = @order.email
+    p
+      strong Pay type:
+      = @order.pay_type
 
-p
-  strong Name:
-  = @order.name
-p
-  strong Address:
-  = @order.address
-p
-  strong Email:
-  = @order.email
-p
-  strong Pay type:
-  = @order.pay_type
-
-= link_to 'Edit', edit_order_path(@order)
-'  |
-= link_to 'Back', orders_path
+    = link_to 'Edit', edit_order_path(@order)
+    '  |
+    = link_to 'Back', orders_path
