--- a/app/views/products/show.html.slim
+++ b/app/views/products/show.html.slim
@@ -13,6 +13,9 @@ p
   strong Price:
   = @product.price
 
-= link_to 'Edit', edit_product_path(@product)
-'  |
-= link_to 'Back', products_path
+= button_to 'Add to Cart', line_items_path(product_id: @product), remote: true
+
+- if session[:user_id]
+  = link_to 'Edit', edit_product_path(@product)
+  '  |
+  = link_to 'Back', products_path
