--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -1,23 +1,15 @@
-h1 Listing users
+p#notice
+  = notice
 
-table
-  thead
-    tr
-      th Name
-      th Password
-      th
-      th
-      th
-
-  tbody
-    - @users.each do |user|
-      tr
-        td = user.name
-        td = user.password
-        td = link_to 'Show', user
-        td = link_to 'Edit', edit_user_path(user)
-        td = link_to 'Destroy', user, data: { confirm: 'Are you sure?' }, method: :delete
-
-br
-
-= link_to 'New User', new_user_path
+.content
+  .panel
+    h2 Listing users
+    table
+      - @users.each do |user|
+        tr
+          td = user.name
+          td = link_to 'Show', user
+          td = link_to 'Edit', edit_user_path(user)
+          td = link_to 'Destroy', user, data: { confirm: 'Are you sure?' }, method: :delete
+    br
+    = link_to 'New User', new_user_path
