--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -1,12 +1,13 @@
 p#notice = notice
+.content
+  .panel
+    p
+      strong Name:
+      = @user.name
+    p
+      strong Password:
+      = @user.password
 
-p
-  strong Name:
-  = @user.name
-p
-  strong Password:
-  = @user.password
-
-= link_to 'Edit', edit_user_path(@user)
-'  |
-= link_to 'Back', users_path
+    = link_to 'Edit', edit_user_path(@user)
+    '  |
+    = link_to 'Back', users_path
