--- a/app/views/line_items/decrease.js.erb
+++ b/app/views/line_items/decrease.js.erb
@@ -1,3 +1,3 @@
-$('.container-cart').html("<%=j render @cart %>");
+$('.container-cart#cart').html("<%=j render @cart %>");
 
 $('.fa.fa-shopping-cart.cart-icon').css({'color':'#CC0000'}).animate({'color':'#515783'}, 2500);
