--- a/app/views/products/edit.html.slim
+++ b/app/views/products/edit.html.slim
@@ -1,8 +1,10 @@
-h1 Editing product
+.content
+  .panel
 
-== render 'form'
+    h2 Editing product
 
-= link_to 'Show', @product
-'  |
-= link_to 'Back', products_path
+    == render 'form'
 
+    = link_to 'Show', @product
+    '  |
+    = link_to 'Back', products_path
