--- a/app/views/carts/_cart.html.slim
+++ b/app/views/carts/_cart.html.slim
@@ -12,5 +12,4 @@
     ul.shopping-cart-items
       = render(cart.line_items)
     .button
-      = button_to "Checkout", new_order_path, method: :get, :form_class => 'button-left'
-      //= button_to 'Empty cart', cart, method: :delete, :form_class => 'button-right', data: { confirm: 'Are you sure?' }
+      = button_to "Checkout", new_order_path, method: :get
