--- a/app/views/orders/new.html.slim
+++ b/app/views/orders/new.html.slim
@@ -1,4 +1,6 @@
-.depot_form
-  fieldset
-    legend Please enter your details
-    = render 'form', order: @orders
+.content
+  .panel
+    .depot_form
+      fieldset
+        legend Please enter your details
+        = render 'form', order: @orders
