--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -35,39 +35,13 @@ html
               a#cart
                 i.fa.fa-shopping-cart#fa-cart
                 |  Cart 
-                / - if @cart 
-                /   span.badge
-                /     = @cart.line_items.sum('quantity')
+                - if @cart 
+                  span.badge
+                    = @cart.line_items.sum('quantity')
       .container
         .container-cart#cart
           - if @cart
             = hidden_div_if(@cart.line_items.empty?, id: 'cart') do
               = render @cart
-        
-    / #columns
-    /   #side
-    /     ul
-    /       li
-    /         a[href="#"]
-    /           | Home
-    /       li
-    /         a[href="#"]
-    /           | Questions
-    /       li
-    /         a[href="#"]
-    /           | News
-    /       li
-    /         a[href="#"]
-    /           | Contact
-    /   
-    /   - if session[:user_id]
-    /     ul 
-    /       li 
-    /         = link_to 'Orders', orders_path
-    /       li 
-    /         = link_to 'Products', products_path
-    /       li 
-    /         = link_to 'Users', users_path
-    /
     .main
       = yield
