--- a/app/views/line_items/increase.js.erb
+++ b/app/views/line_items/increase.js.erb
@@ -3,4 +3,6 @@
 $('.container-cart').html("<%=j render @cart %>");
 $('.badge').html(<%= @cart.line_items.sum('quantity') %>);
 $('.fa.fa-shopping-cart.cart-icon').css({'color':'#00CC00'}).animate({'color':'#515783'}, 2500);
-$('#current_item').css({'background-color':'#88ff88'}).animate({'background-color':'#F8F8F8'}, 1000);
+
+// For tracking cart bugs 
+//$('#current_item').css({'background-color':'#88ff88'}).animate({'background-color':'#F8F8F8'}, 1000);
