--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -27,6 +27,8 @@ html
                 = link_to 'Products', products_path
               li 
                 = link_to 'Users', users_path 
+              li 
+                = button_to 'Logout', logout_path, method: :delete
 
           ul.navbar-right
             li#container-cart
